Add email functionality, AWS S3 integration, and switch to PostgreSQL database

--- a/base/templates/base/about.html
+++ b/base/templates/base/about.html
@@ -6,11 +6,10 @@
     </div>
 
     <div class="about-text-block">
-            <h2 class="label-text">About</h2>
+            <h2 class="label-text-about">About</h2>
             <p class="border-bot"> </p>
-            <p class="name-text">Some label text for about section</p>
-
-            <p class="description-text">I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.​This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors. Make your company stand out and show your visitors who you are.</p>
+            <p class="name-text">About WeldStar Corporation</p>
+            <p class="description-text">With a proud legacy spanning two decades, WeldStar Corporation has been a steadfast leader in welding services.Over the past 20 years, we have continually pushed the boundaries of what's achievable in the world of welding. Our journey has been marked by countless successful projects, each contributing to our unmatched expertise.At WeldStar, we are more than just welders - we are true craftsmen and skilled engineers. Our team of certified welders brings precision and passion to every project.We specialize in a wide range of techniques to meet the unique needs of each project.Quality and safety form the foundation of our work. We adhere to the industry's most rigorous standards and employ cutting-edge technology to ensure flawless welds and the highest level of safety.Looking forward, our vision is clear: to remain at the forefront of welding innovation, establish new industry benchmarks, and consistently exceed our clients' expectations.Join us as we forge ahead into the future, shaping a world built on strength, precision, and enduring quality.<br/>Thank you for choosing WeldStar Corporation - where welding is both an art and a science.</p>
     </div>
     
 </div>
