--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeldStar Corporation </title>
     
-    <link rel="stylesheet" type="text/css" href=" {% static '/css/style.css' %} ">
+    <link rel="stylesheet" type="text/css" href=" {% static 'css/style.css' %} ">
 </head>
 <body>
     {% include 'base/nav.html' %}
@@ -18,6 +18,6 @@
     {% include 'base/projects.html' %}
     {% include 'base/contact_us.html' %}
 
-    <script src="{% static '/javascript/javascript.js' %}"></script>
+    <script src="{% static 'javascript/javascript.js' %}"></script>
 </body>
 </html>
