--- a/base/templates/base/nav.html
+++ b/base/templates/base/nav.html
@@ -2,7 +2,7 @@
 
 <div class="nav-block">
     <div class="logo-block">
-        <img class="logo" src="{% static '/images/logo.jpg' %}" alt="logo">
+        <img class="logo" src="{% static 'images/logo.jpg' %}" alt="logo">
     </div>
 
     <ul class="nav-bar">
