--- a/base/templates/base/services.html
+++ b/base/templates/base/services.html
@@ -10,7 +10,7 @@
     
             <div class="services-text">
                 <h4 class="name-text"> Manufacturing</h4>
-                <p class="description-text">I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. </p>
+                <p class="description-text">We offer expert metal fabrication and welding services, including Shielded Metal Arc Welding (SMAW), Metal Inert Gas (MIG) Welding, and Tungsten Inert Gas (TIG) Welding.</p>
             </div>
         </div>
     
@@ -19,7 +19,7 @@
     
             <div class="services-text">
                 <h4 class="name-text"> Fabrication</h4>
-                <p class="description-text">I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. </p>
+                <p class="description-text">Fabrication is the comprehensive process of transforming raw materials into finished products.It encompasses the entire journey, starting with design and material selection, and proceeding through cutting, shaping, forming, and finishing. </p>
             </div>
         </div>
     
@@ -28,7 +28,7 @@
     
             <div class="services-text">
                 <h4 class="name-text"> Construction</h4>
-                <p class="description-text">I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. </p>
+                <p class="description-text">We specialize in welding, connecting steel I-beams, trusses, columns, and footers to create strong and durable structural frameworks for buildings. Our expertise ensures the reliable support of walls, roofs, and floors.</p>
             </div>
         </div>
 
@@ -40,7 +40,7 @@
     
             <div class="services-text">
                 <h4 class="name-text"> Welding Instructor</h4>
-                <p class="description-text">I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. </p>
+                <p class="description-text">Empower your welding skills with our expert instructor. Learn the art and science of welding from seasoned professionals, gaining hands-on experience and valuable knowledge for a successful welding career.</p>
             </div>
         </div>
     
@@ -49,7 +49,7 @@
     
             <div class="services-text">
                 <h4 class="name-text"> Heavy Equipment</h4>
-                <p class="description-text">I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. </p>
+                <p class="description-text">Our heavy equipment service excels with FCAW, ideal for thicker, heavier metals due to its high-heat capabilities. It's the preferred choice for efficient repairs, minimizing waste. Plus, it's cost-effective as it doesn't require external gas.</p>
             </div>
         </div>
     
@@ -57,8 +57,8 @@
             <img src="{% static 'images/serv6.jpg'%}" alt="image" width="320" height="250"> 
     
             <div class="services-text">
-                <h4 class="name-text"> Aluminum System</h4>
-                <p class="description-text">I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. </p>
+                <h4 class="name-text"> Boiler System</h4>
+                <p class="description-text">Discover efficient heating solutions with our boiler systems. We provide expert installation, maintenance, and repair services for boilers, ensuring your space stays warm and comfortable. Trust us for reliable, energy-efficient heating solutions.</p>
             </div>
         </div>
      
