--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,7 +123,6 @@ body{
     height: 100vh;
     width: 100%;
     min-height: 500px;
-    background-image: url("/static/images/bc.jpg");
     position: sticky;
     background-position: center;
     background-repeat: no-repeat;
@@ -165,6 +164,43 @@ body{
     animation: none;
 }
 
+/* Slider container */
+.slider-container {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+/* Individual slides */
+.slider-slide {
+    flex: 0 0 100%;
+    text-align: center;
+    position: relative; 
+}
+
+.slider-slide img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Slide text */
+.slide-text {
+    color: #fff;
+    font-size: 9rem;
+    font-weight: bold;
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+}
+
+/* Additional styles for animating the slider */
+.slider-container.active .slider-slide {
+    display: flex;
+}
+
 @keyframes pulse {
     0% {
       transform: scale(1);
@@ -201,7 +237,11 @@ body{
     color: var(--label-text);
     text-transform: uppercase;
     margin-top: 40px;
+    font-weight: 300px;
 }
+
+
+
 
 .border-bot{
     border-bottom: 6px solid var(--nav_text);
@@ -229,7 +269,7 @@ body{
 .block{
     display: block;
     width: 320px;
-    height: 550px;
+    height: 570px;
     background-color: var(--bc-clolor);
 }
 
@@ -242,11 +282,17 @@ body{
 
 
 }
+
+.services-text{
+    height: auto;
+    padding: 10px 0;
+}
+
 .description-text{
     color: var(--description-text);
     padding: 0 15px;
     font-family: 'Lora', serif;
-    line-height: 1.9; 
+    line-height: 1.8; 
     letter-spacing: 0.5px; 
 }
 
@@ -261,11 +307,22 @@ body{
     margin-top: 40px;
 }
 
+.label-text-about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 58px;
+    font-family: 'Inter', sans-serif;
+    color: var(--label-text);
+    text-transform: uppercase;
+    font-weight: 300px;
+}
+
 .image-block{
     display: flex;
     width: 100%;
     height: 100%;
-    padding: 40px;
+    padding: 120px 0 40px 40px;
 
 }
 
@@ -302,7 +359,7 @@ body{
     height: 400px;
     cursor: pointer;
     position: relative;
-    flex-basis: calc(33.33% - 20px);
+    flex-basis: calc(30% - 20px);
     margin: 0 10px 20px;
 }
 
@@ -421,7 +478,7 @@ body{
 }
 
 .contact-information{
-    padding: 50px 0 50px 80px;
+    padding: 50px 0 0 80px;
 }
 
 .contact-info-text{
@@ -475,7 +532,7 @@ body{
 }
 
 .contact-form{
-    height: 100%;
+    height:auto;
     width: 65%;
     background-color: var(--nav_text); 
 }
@@ -503,7 +560,8 @@ body{
     margin: 10px 0;
     width: 100%;
     height: 160px;
-    padding: 5px;
+    padding: 10px 5px;
+
 }
 
 .btn{
@@ -528,10 +586,10 @@ body{
 .footer{
     display: flex;
     width: 100%;
-    height: 40px;
+    height: auto;
     background-color: var(--nav_color);
     color: var(--nav_text);
-    margin: 40px 0 0 80px;
+    margin: 25px 0 0 0px;
 }
 
 
@@ -539,13 +597,23 @@ body{
 @media only screen and (max-width: 576px) {
 
     /* Main Screen */
-
     .main_sc-block{
         max-width:400px ;
+        height: 100vh;
     }
+
     .main-text{
         font-size: 5rem;
+    }
 
+    .slider-slide img{
+        max-width: 400px;
+        height: 90vh;
+    }
+
+    .slide-text{
+        font-size: 5rem;
+        top: 30%; 
     }
 
     .main_sc-link{
@@ -578,8 +646,13 @@ body{
         padding: 0;
     }
     .image-block img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
         max-width: 318px;
         height: auto;
+        
     }
     .about-block{
         display: flex;
@@ -642,7 +715,7 @@ body{
     
     .footer{
         width: auto;
-        margin: 0px 20px;
+        margin: 20px 0px;
     }
 
 }
