Add email functionality, AWS S3 integration, and switch to PostgreSQL database

--- a/base/templates/base/main_sc.html
+++ b/base/templates/base/main_sc.html
@@ -5,7 +5,7 @@
     <div class="slider-container">
         <div class="slider-slide">
             <img src="{% static 'images/bc.jpg' %}" alt="Slide 1">
-            <p class="slide-text">20 years in buissnes</p>
+            <p class="slide-text">20 years in business</p>
         </div>
         <div class="slider-slide">
             <img src="{% static 'images/bc2.jpg' %}" alt="Slide 2">
